# python-ngsild-client

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md  installation.md  usage.md
src/pyngsildclient/: __init__.py  cli.py  settings.py
src/pyngsildclient/api/: alt.py  batch.py  client.py  constants.py  contexts.py  entities.py  exceptions.py  follow.py  subscriptions.py  temporal.py  temporal_alt.py  types.py
src/pyngsildclient/api/asyn/: __init__.py  batch.py  client.py  contexts.py  entities.py  subscriptions.py  temporal.py  types.py
src/pyngsildclient/api/helper/: subscription.py  temporal.py
src/pyngsildclient/model/: constants.py  entity.py  exceptions.py  ngsidict.py  utils.py
src/pyngsildclient/model/attr/: factory.py  geo.py  prop.py  rel.py  temporal.py
src/pyngsildclient/model/helper/: openinghours.py  postal.py
src/pyngsildclient/utils/: __init__.py  console.py  dataviz.py  iso8601.py  sentinel.py  url.py  urn.py  uuid.py
tests/: common.py  conftest.py  test_attr.py  test_batch async.py  test_batch.py  test_client.py  test_entities async.py  test_entities.py  test_entity.py  test_graph.py  test_helper_opening_hours.py  test_helper_postal.py  test_helper_subscription.py  test_helper_temporal.py  test_iso8601.py  test_ngsidict.py  test_pyngsildclient.py  test_temporal.py  test_urn.py
tests/smartdatamodels/device/: test_device.py
tests/smartdatamodels/poi/: test_poi.py
tests/smartdatamodels/smartagri/: test_agrifood.py
tests/smartdatamodels/smartcities/: test_building.py  test_urbanmobility.py  test_weather.py
tests/smartdatamodels/smartwater/: test_pipe.py
