[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyngsildclient"
version = "0.2.0"
description = "pyngsildclient is a Python library dedicated to NGSI-LD."
readme = "README.md"
authors = [
  {name = "Hyvilo", email = "dev-services@hyvilo.eu"}
]
maintainers = [
  {name = "Hyvilo", email = "dev-services@hyvilo.eu"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "Apache 2.0"}
dependencies = [
  "typer",
  "rich",
  "geojson",
  "requests",
  "httpx",
  "aiofiles",
  "isodate",
  "networkx",
  "scalpl",
  "python-dateutil",
  "multipledispatch",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "setuptools",
    "coverage",
    "pytest",
    "pytest_mock",
    "pytest_httpx",
    "pytest-asyncio",
    "requests_mock",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/hyvilo/python-ngsild-client/issues"
changelog = "https://github.com/hyvilo/python-ngsild-client/releases"
documentation = "https://hyvilo.github.io/python-ngsild-client/"
homepage = "https://github.com/hyvilo/python-ngsild-client"

[project.scripts]
pyngsildclient = "pyngsildclient.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "F841",
    "E501",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio",
]

[tool.uv]
package = true
default-groups = ["dev"]
